--- a/vercel.json
+++ b/vercel.json
@@ -21,16 +21,11 @@
     {
       "src": "/likedsongs(.*)",
       "dest": "index.js"
-    },
-    {
-      "src": "/api/(.*)",
-      "dest": "index.js"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "public/$1"
     }
-  ]
+   
+    
+  ],
+  "rewrites": [{ "source": "/(.*)", "destination": "index.js" }]
 
   
 }
