--- a/vercel.json
+++ b/vercel.json
@@ -11,11 +11,7 @@
   ],
   "routes": [
     {
-      "src": "/products",
-      "dest": "index.js"
-    },
-    {
-      "src": "/products/(.*)",
+      "src": "/auth",
       "dest": "index.js"
     },
     {
@@ -24,6 +20,10 @@
     },
     {
       "src": "/playlist",
+      "dest": "index.js"
+    },
+    {
+      "src": "/playlist/(.*)",
       "dest": "index.js"
     },
     {
