--- a/vercel.json
+++ b/vercel.json
@@ -3,10 +3,54 @@
     {
       "src": "index.js",
       "use": "@vercel/node"
+    },
+    {
+      "src": "build/**",
+      "use": "@vercel/static"
     }
   
   ],
   "routes": [
+    {
+      "src": "/auth",
+      "dest": "/index.js"
+    },
+    {
+      "src": "/auth/(.*)",
+      "dest": "/index.js"
+    },
+    {
+      "src": "/song",
+      "dest": "/index.js"
+    },
+    {
+      "src": "/song/(.*)",
+      "dest": "/index.js"
+    },
+    {
+      "src": "/playlist",
+      "dest": "/index.js"
+    },
+    {
+      "src": "/playlist/(.*)",
+      "dest": "/index.js"
+    },
+    {
+      "src": "/likedsongs",
+      "dest": "/index.js"
+    },
+    {
+      "src": "/likedsongs/(.*)",
+      "dest": "/index.js"
+    },
+    {
+      "src": "/",
+      "dest": "/build/index.html"
+    },
+    {
+      "src": "/(.+)",
+      "dest": "/build/$1"
+    },
     {
       "src": "/(.*)",
       "dest": "/index.js"
