--- a/vercel.json
+++ b/vercel.json
@@ -12,6 +12,52 @@
     {
       "src": "/(.*)",
       "dest": "/index.js"
+    },
+    {
+      "src": "/library",
+      "dest": "/build/index.html"
+    },
+    {
+      "src": "/search",
+      "dest": "/build/index.html"
+    },
+    {
+      "src": "/login",
+      "dest": "/build/index.html"
+    },
+    {
+      "src": "/signup",
+      "dest": "/build/index.html"
+    },
+    {
+      "src": "/uploadsong",
+      "dest": "/build/index.html"
+    },
+    {
+      "src": "/home",
+      "dest": "/build/index.html"
+    },
+    {
+      "src": "/profile",
+      "dest": "/build/index.html"
+    },
+    {
+      "src": "/allplaylist",
+      "dest": "/build/index.html"
+    },
+    {
+      "src": "/likedsongs",
+      "dest": "/build/index.html"
+    },
+    {
+      "src": "/playlist/:playlistId",
+      "dest": "/build/index.html"
+    },
+    {
+      "src": "mymusic",
+      "dest": "/build/index.html"
     }
+
+
   ]
 }
