--- a/vercel.json
+++ b/vercel.json
@@ -3,16 +3,17 @@
     {
       "src": "index.js",
       "use": "@vercel/node"
+    },
+    {
+      "src": "build/**",
+      "use": "@vercel/static"
     }
    
   
   ],
   "routes": [
     
-    {
-      "src": "/(.*)",
-      "dest": "/index.js"
-    },
+  
     {
       "src": "/library",
       "dest": "/build/index.html"
@@ -56,7 +57,12 @@
     {
       "src": "mymusic",
       "dest": "/build/index.html"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/index.js"
     }
+
 
 
   ]
