--- a/vercel.json
+++ b/vercel.json
@@ -64,7 +64,7 @@
       "dest": "/build/index.html"
     },
     {
-      "src": "mymusic",
+      "src": "/mymusic",
       "dest": "/build/index.html"
     },
     {
