--- a/vercel.json
+++ b/vercel.json
@@ -1,79 +1,28 @@
 {
+  "version": 2,
   "builds": [
     {
-      "src": "index.js",
-      "use": "@vercel/node"
-    },
-    {
-      "src": "build/**",
-      "use": "@vercel/static"
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "build"
+      }
     }
-   
-  
   ],
   "routes": [
-  
-  
     {
-      "src": "/library",
-      "dest": "/build/index.html"
-    },
-    {
-      "src": "/search",
-      "dest": "/build/index.html"
-    },
-    {
-      "src": "/login",
-      "dest": "/build/index.html"
-    },
-    {
-      "src": "/signup",
-      "dest": "/build/index.html"
-    },
-    {
-      "src": "/uploadsong",
-      "dest": "/build/index.html"
-    },
-    {
-      "src": "/home",
-      "dest": "/build/index.html"
-    },
-    {
-      "src": "/playlist",
-      "dest": "/build/index.html"
-    },
-    {
-      "src": "/playlist/(.*)",
-      "dest": "/build/index.html"
-    },
-
-    {
-      "src": "/profile",
-      "dest": "/build/index.html"
-    },
-    {
-      "src": "/allplaylist",
-      "dest": "/build/index.html"
-    },
-    {
-      "src": "/likedsongs/(.*)",
-      "dest": "/build/index.html"
-    },
-    {
-      "src": "/playlist",
-      "dest": "/build/index.html"
-    },
-    {
-      "src": "/mymusic",
-      "dest": "/build/index.html"
+      "src": "/static/(.*)",
+      "headers": {
+        "cache-control": "public,max-age=31536000,immutable"
+      },
+      "dest": "/static/$1"
     },
     {
       "src": "/(.*)",
-      "dest": "/index.js"
+      "headers": {
+        "cache-control": "public,max-age=0,must-revalidate"
+      },
+      "dest": "/index.html"
     }
-  
-
-
-
   ]
 }
