--- a/vercel.json
+++ b/vercel.json
@@ -1,28 +1,27 @@
 {
-  "version": 2,
   "builds": [
     {
-      "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "build"
-      }
-    }
-  ],
-  "routes": [
-    {
-      "src": "/static/(.*)",
-      "headers": {
-        "cache-control": "public,max-age=31536000,immutable"
-      },
-      "dest": "/static/$1"
+      "src": "index.js",
+      "use": "@vercel/node"
     },
     {
-      "src": "/(.*)",
-      "headers": {
-        "cache-control": "public,max-age=0,must-revalidate"
-      },
-      "dest": "/index.html"
+      "src": "build/**",
+      "use": "@vercel/static"
     }
+   
+  
+  ],
+  "routes": [
+  
+  
+  
+    {
+      "src": "/(.*)",
+      "dest": "/index.js"
+    }
+  
+
+
+
   ]
 }
