--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
       "use": "@vercel/node"
     },
     {
-      "src": "../spotify-frontend/build/**",
+      "src": "build/**",
       "use": "@vercel/static"
     }
   ],
